--- a/index.html
+++ b/index.html
@@ -29,14 +29,11 @@ Project Files: 06-00
                 <ul>
                     <li>
                         <a href="#" title="Return to the front page">Home</a>
-                    </li>
-                    <li>
+                    </li><li>
                         <a href="#" title="About Company Name">About</a>
-                    </li>
-                    <li class="products">
+                    </li><li class="products">
                         <a href="#" title="Visit our shop">Shop</a>
-                    </li>
-                    <li>
+                    </li><li>
                         <a href="#" title="Contact us">Contact</a>
                     </li>
                 </ul>
