--- a/index.html
+++ b/index.html
@@ -112,5 +112,7 @@ Project Files: 06-00
                 </li>
             </ul>
         </footer>
+        <img class="banner-ad" src="images/banner-25percent.png"
+            alt="25% Off All Purchases" />
     </body>
 </html>
