Link Google Web Fonts to HTML

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@ Project Files: 06-00
     <head>
         <meta charset="utf-8" />
         <title>Cool Shoes &amp; Socks</title>
+        <link href="https://fonts.googleapis.com/css2?family=Average&family=Belgrano&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="css/styles.css" type="text/css" media="all" />
         <!--[if lt IE 9]>
         <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js">
