Replace Offer Banner Image with Div

--- a/index.html
+++ b/index.html
@@ -136,7 +136,6 @@ Project Files: 06-00
                 </li>
             </ul>
         </footer>
-        <img class="banner-ad" src="images/banner-25percent.png"
-            alt="25% Off All Purchases" />
+        <div class="banner-ad"><span>25% Off</span>All Purchases</div>
     </body>
 </html>
