--- a/index.html
+++ b/index.html
@@ -65,7 +65,10 @@ Project Files: 06-00
         </header>
         
         <div class="showcase">
-            <img src="images/banner-trainers.jpg" alt="Some of our cool trainers" />
+            <ul>
+                <li><img src="images/banner-trainers.jpg" alt="Some of our cool trainers" /></li>
+                <li><img src="images/banner-shoes.jpg" alt="Some of our cool shoes" /></li>
+            </ul>
             <a class="button purchase" href="#" title="Purchase product">
                 More Information
             </a>
