Add Third Image to Showcase Section

--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@ Project Files: 06-00
             <ul>
                 <li><img src="images/banner-trainers.jpg" alt="Some of our cool trainers" /></li>
                 <li><img src="images/banner-shoes.jpg" alt="Some of our cool shoes" /></li>
+                <li><img src="images/banner-socks.jpg" alt="Some of our cool socks" /></li>
             </ul>
             <a class="button purchase" href="#" title="Purchase product">
                 More Information
